# soniccontrol

./: .gitignore  .gitmodules  03052022_soniccontrol_help_page.docx  19042022_soniccontrol_help_page.docx  2021-11-05_SonicWipeControl.spec  README.md  SETUP.md  SonicControl-1_05-prototype.spec  SonicControl.spec  SonicControlRaman-154.spec  SonicControl_1-52.spec  SonicWipeControl.spec  SonicWipeControl_LAB_CONSOLE.spec  __main__.py  check_python_version.py  classes.puml  compilation.bat  compilation.sh  config.json  inno_setup.iss  log_config.json  main.py  manual.md  packages.puml  project-plan.md  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run_simulation.py  setup.cfg  setup.py  spectra_2022-04-08_15-01-30.csv  tmp.py  ~$042022_soniccontrol_help_page.docx  ~$052022_soniccontrol_help_page.docx  ~WRL0622.tmp
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  run_tests.yml  run_unit_tests.yml  update_latest_tag_on_release.yml
ScriptingSequence/: 2022-05-30_17-35-34_sonicwipe_sequence.csv  2022-05-30_17-35-46_sonicwipe_sequence.csv  2022-05-30_17-35-58_sonicwipe_sequence.csv  2022-05-30_17-36-34_sonicwipe_sequence.csv  2022-05-30_19-32-08_sonicwipe_sequence.csv  2022-05-30_19-32-29_sonicwipe_sequence.csv  2022-05-30_19-32-58_sonicwipe_sequence.csv  2022-05-30_19-33-09_sonicwipe_sequence.csv  2022-05-30_19-33-15_sonicwipe_sequence.csv  2022-05-30_19-33-21_sonicwipe_sequence.csv  2022-05-30_19-33-25_sonicwipe_sequence.csv  2022-05-30_20-01-37_sonicwipe_sequence.csv  2022-06-24_11-42-07_soniccatch_sequence.csv  2022-06-28_14-19-18_soniccatch_sequence.csv  2022-06-28_14-20-03_soniccatch_sequence.csv  2022-06-28_14-20-06_soniccatch_sequence.csv  2022-06-28_14-21-43_soniccatch_sequence.csv  2022-06-28_14-23-11_soniccatch_sequence.csv  2022-06-29_15-54-04_soniccatch_sequence.csv  2022-06-29_15-56-51_soniccatch_sequence.csv  2022-06-29_15-59-00_soniccatch_sequence.csv  2022-06-29_16-18-20_soniccatch_sequence.csv  2022-06-29_16-19-27_soniccatch_sequence.csv
SonicControl/: FunctionHelper.py  FunctionHelper.ui  MainApp.py  README.md  SerialMonitor.py  SonicControl.ui  __init__.py
SonicMeasure/: sonicmeasure_2022-05-27_16-00-36.csv  sonicmeasure_2022-06-24_14-09-26.csv  sonicmeasure_2022-06-28_14-18-38.csv  sonicmeasure_2022-07-05_15-43-03.csv
Status_Logs/: statuslog_2022-05-27_08-43-43.csv  statuslog_soniccatch_2022-06-13_12-28-06.csv  statuslog_soniccatch_2022-06-24_11-37-52.csv  statuslog_soniccatch_2022-06-24_11-41-21.csv  statuslog_soniccatch_2022-06-24_14-01-46.csv  statuslog_soniccatch_2022-06-24_14-05-02.csv  statuslog_soniccatch_2022-06-24_14-07-07.csv  statuslog_soniccatch_2022-06-24_14-08-44.csv  statuslog_soniccatch_2022-06-24_14-27-27.csv  statuslog_soniccatch_2022-06-24_14-47-07.csv  statuslog_soniccatch_2022-06-24_15-02-14.csv  statuslog_soniccatch_2022-06-24_15-02-41.csv  statuslog_soniccatch_2022-06-27_15-53-28.csv  statuslog_soniccatch_2022-06-27_16-24-32.csv  statuslog_soniccatch_2022-06-28_10-49-12.csv  statuslog_soniccatch_2022-06-28_10-51-41.csv  statuslog_soniccatch_2022-06-28_10-52-49.csv  statuslog_soniccatch_2022-06-28_10-57-26.csv  statuslog_soniccatch_2022-06-28_10-59-42.csv  statuslog_soniccatch_2022-06-28_11-03-29.csv  statuslog_soniccatch_2022-06-28_11-05-44.csv  statuslog_soniccatch_2022-06-28_11-15-54.csv  statuslog_soniccatch_2022-06-28_11-16-56.csv  statuslog_soniccatch_2022-06-28_11-19-07.csv  statuslog_soniccatch_2022-06-28_11-22-47.csv  statuslog_soniccatch_2022-06-28_11-25-39.csv  statuslog_soniccatch_2022-06-28_11-26-43.csv  statuslog_soniccatch_2022-06-28_11-45-42.csv  statuslog_soniccatch_2022-06-28_14-01-19.csv  statuslog_soniccatch_2022-06-28_14-17-42.csv  statuslog_soniccatch_2022-06-28_14-21-33.csv  statuslog_soniccatch_2022-06-28_14-23-06.csv  statuslog_soniccatch_2022-06-28_14-56-15.csv  statuslog_soniccatch_2022-06-29_15-53-49.csv  statuslog_soniccatch_2022-06-29_15-56-12.csv  statuslog_soniccatch_2022-06-29_15-58-55.csv  statuslog_soniccatch_2022-06-29_16-17-12.csv  statuslog_soniccatch_2022-06-29_16-18-18.csv  statuslog_soniccatch_2022-06-29_16-19-23.csv  statuslog_soniccatch_2022-07-05_13-14-03.csv  (+20 more)
configs/: log_config.json
data/: transducer_configs.json
debian/: control  rules
docs/: DoxyFile  README.md  class_diagram.puml  get_started.md  mainpage.md  package_message_fetching.puml  parrot.puml  procedures.md  sequence_diagram.puml
docs/diagrams/: sequence_diagram.puml
docs/project_setup/: ci_and_cd.md  deployment.md  documentation.md  project_setup.md  system_tests.md  unit_tests.md
docs/requirements/: connection.md  home.md  info.md  scripting.md  serialmonitor.md  settings.md  sonicmeasure.md
docs/sonic_control/: communication.md  correspondence.md  logging.md  package_protocol.md  procedures.md  scripting.md  sonic_package.md  sonic_scripting_language.md
docs/sonic_control_gui/: connection.md  editor.md  measuring.md  mvp_pattern.md  proc_controlling.md  serial_monitor.md  sonic_control_gui.md
docs/sonic_package/: communication.md  correspondence.md  logging.md  package_protocol.md  procedures.md  scripting.md  sonic_package.md  sonic_scripting_language.md
logs/: config.json
scripts/: check_python_version.py  connect_vpn.sh  create_exe.bat  create_exe.sh  installer.iss  run_simulation.py
sonic_test_parrot/: __main__.py  parrot.py  sonic_package_protocoll.py
soniccontrol/: __init__.py  __main__.py  _notebook.py  connectiontab.py  constants.py  core.py  files.py  gui.py  helpers.py  hometab.py  infotab.py  main.py  scriptingtab.py  serialmonitor.py  setup.py  sonicamp.py  sonicmeasure.py  statusframe.py  tmp.py
soniccontrol/amp/: __init__.py
soniccontrol_/: __init__.py  __main__.py  constants.py
sonicpackage/: connection.py  data.py  interface.py  threads.py
src/: __main__.py  main.py  robot_remote_controller.py
src/avrdude/: __init__.py  (+1 more)
tests/: test_gui.py  test_hello_world.py  test_model.py  test_sonicpackage.py  test_spinbox.py  test_structure.py
tmp/: __init__.py  first.py  interface.py  tmp.py  tmp1.py
(+480 files in other folders)
