[project]
name = "soniccontrol"
description = "Lightweight GUI for controlling a sonicamp"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = {text = "GNU GPLv3 License"}
authors = [
    {name="Ilja Golovanov", email="ilja.golovanov@usepat.com"},
    {name="David Wild", email="david.wild@usepat.com"},
]
maintainers = [
    {name="David Wild", email="david.wild@usepat.com"},
]
urls = { "Homepage" = "https://github.com/usepat/soniccontrol" }
classifiers = [
    "Development Status :: 5 - Production/Experimental",
    "Intended Audience :: PAT",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3"
]
dynamic = ["version"]

# TODO: add dependencies

[project.gui-scripts]
soniccontrol = "soniccontrol_gui:start_gui"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

# Setup testing

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24"
]

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
addopts = [
    "--cov=sonicpackage",
    "--import-mode=importlib"
]

# linter and testing tools

[tool.flake8]
max-line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true

[tool.pyright]
include = ["src"]

# [black]
# line-length = 160
