[project]
name = "soniccontrol"
description = "Lightweight GUI for controlling a sonicamp"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = {text = "GNU GPLv3 License"}
authors = [
    {name="Ilja Golovanov", email="ilja.golovanov@usepat.com"},
    {name="David Wild", email="david.wild@usepat.com"},
]
maintainers = [
    {name="David Wild", email="david.wild@usepat.com"},
]
urls = { "Homepage" = "https://github.com/usepat/soniccontrol" }
classifiers = [
    "Development Status :: 5 - Production/Experimental",
    "Intended Audience :: PAT",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3"
]
dynamic = ["version"]

# TODO: add dependencies

dependencies = [
    "altgraph==0.17.4",
    "astroid==3.2.4",
    "asttokens==2.4.1",
    "async-tkinter-loop==0.9.3",
    "asynctest==0.13.0",
    "attrs==23.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "bottle==0.12.25",
    "bottle-websocket==0.2.9",
    "callee==0.3.1",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "contourpy==1.2.1",
    "coverage==7.6.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "docopt==0.6.2",
    "Eel==0.17.0",
    "exceptiongroup==1.2.2",
    "executing==2.0.1",
    "fastjsonschema==2.20.0",
    "flake8==7.1.1",
    "fonttools==4.53.1",
    "future==1.0.0",
    "gevent==24.2.1",
    "gevent-websocket==0.10.1",
    "greenlet==3.0.3",
    "httplib2==0.22.0",
    "icecream==2.1.3",
    "idna==3.7",
    "importlib_metadata==8.0.0",
    "importlib_resources==6.4.0",
    "iniconfig==2.0.0",
    "ipython==8.12.3",
    "isort==5.13.2",
    "jedi==0.19.1",
    "Jinja2==3.1.4",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "jupyterlab_pygments==0.3.0",
    "kiwisolver==1.4.5",
    "MarkupSafe==2.1.5",
    "marshmallow==2.21.0",
    "marshmallow-annotations==2.4.0",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mistune==3.0.2",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "numpy==2.0.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pefile==2024.8.26",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "Pillow==9.5.0",
    "pipreqs==0.5.0",
    "platformdirs==4.2.2",
    "plotly==5.22.0",
    "pluggy==1.5.0",
    "prompt_toolkit==3.0.47",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pyelftools==0.31",
    "pyflakes==3.2.0",
    "pyglet==2.0.15",
    "Pygments==2.18.0",
    "pyinstaller==6.9.0",
    "pyinstaller-hooks-contrib==2024.7",
    "pylint==3.2.6",
    "pyparsing==3.1.2",
    "pyserial==3.5",
    "pyserial-asyncio==0.6",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pywin32-ctypes==0.2.3",
    "pyzmq==26.0.3",
    "referencing==0.35.1",
    "requests==2.32.3",
    "robotframework==7.0.1",
    "rpds-py==0.18.1",
    "setuptools==74.0.0",
    "setuptools-git-versioning==2.0.0",
    "six==1.16.0",
    "soupsieve==2.5",
    "stack-data==0.6.3",
    "tenacity==8.5.0",
    "tinycss2==1.3.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.13.2",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "ttkbootstrap==1.10.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "whichcraft==0.6.1",
    "yarg==0.1.9",
    "zipp==3.19.2",
    "zope.event==5.0",
    "zope.interface==6.4.post2",
]


[project.gui-scripts]
soniccontrol = "soniccontrol_gui:start_gui"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
# Include package data is needed so that the resources get shipped with the package
include-package-data = true

[tool.setuptools.package-data]
# Specify the package and the files to include
"soniccontrol_gui" = ["resources/**/*", "log_config.json"]
"sonicpackage" = ["bin/**/*"]  # Include everything in the bin directory

[tool.setuptools.packages.find]
where = ["src"]

# We use this to automatically get the version from the git tags
[tool.setuptools-git-versioning]
enabled = true

# Setup testing

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "mypy>=0.910",
    "flake8>=3.9",
    "tox>=3.24"
]

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
# tell the coverage tool to look how much of soniccontrol stastements was covered by the test
addopts = [
    "--cov=soniccontrol", 
    "--import-mode=importlib"
]

# linter and testing tools

[tool.flake8]
max-line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true

[tool.pyright]
include = ["src"]

# [black]
# line-length = 160
