[metadata]
name = soniccontrol
version = 0.1.85
author = Usepat G.m.b.H
author_email = info@usepat.com
maintainer = Ilja Golovanov
maintainer_email = ilja.golovanov@usepat.com
description = Lightweight GUI for controlling a sonicamp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usepat/soniccontrol
classifiers =
    Development Status :: 5 - Production/Experimental
    Intended Audience :: PATLicense :: OSI Approved :: GNU GPLv3 License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = =src
install_requires =
    pyserial
    Pillow
    pyglet
    tk
    ttkbootstrap
    matplotlib
    sonicpackage @ git+https://iljag00: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@github.com/usepat/sonicpackage@master

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    soniccontrol = main:main
