[metadata]
name = soniccontrol
version = attr: soniccontrol.__version__
author = attr: soniccontrol.__author__
author_email = attr: soniccontrol.__email__
maintainer = attr: soniccontrol.__maintainer__
maintainer_email = attr: soniccontrol.__maintainer_email__
description = Lightweight GUI for controlling a sonicamp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usepat/soniccontrol
classifiers =
    Development Status :: 5 - Production/Experimental
    Intended Audience :: PATLicense :: OSI Approved :: GNU GPLv3 License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: Linux
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pyserial
    pyserial-asyncio
    async-tkinter-loop
    attrs
    Pillow==9.0.0
    pyglet
    ttkbootstrap
    matplotlib
    pandas

[options.packages.find]
exclude =
    tests*
    testing*

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
* = *.txt, *.rst
soniccontrol = py.typed

[options.entry_points]
gui_scripts =
    soniccontrol = main:main

[flake8]
ignore = F401,F402,W391
extend_ignore = 
    F401,
    F402
    
